# parallel_assignment

./: .gitignore  CMakeLists.txt  main.cpp  naive.cl
include/: utils.h
kernels/: naive.cl  optimized.cl  optimized_histogram.cl
